# chain-of-claims

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/chain_of_claims/: __init__.py  api.py  cli.py  config.py  db.py  models.py  pipeline.py  results.py
backend/chain_of_claims/ingest/: __init__.py  chunker.py  documents.py  webfetch.py
backend/chain_of_claims/llm/: __init__.py  anthropic_provider.py  client.py  offline_provider.py  provider.py  tools.py
backend/chain_of_claims/stages/: __init__.py  s10_hallucination.py  s1_extract.py  s1b_coverage.py  s2_prune.py  s3_toulmin.py  s4_warrant_audit.py  s4b_causal_attribution.py  s6_ground.py  s7_explainability.py  s8_factcheck.py  s9_citations.py
backend/samples/: gold_claims.json  report.md  source_filing.md
backend/tests/: test_anthropic_smoke.py  test_causal_warrant.py  test_coverage.py  test_factcheck.py  test_grounding.py  test_pipeline.py  test_webfetch.py
docs/: spec-causal-warrant-checking.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ClaimEvidenceGraph.tsx  ClaimTable.tsx  Scores.tsx  styles.css  types.ts
