[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chain-of-claims"
version = "0.1.0"
description = "Agentic claim-evidence verification for financial research reports"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
    "anthropic>=0.39",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chain_of_claims*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
